# Chess

./: CMakeLists.txt  LICENSE  README.md  SchaakGUI.cpp  SchaakGUI.h  SchaakStuk.cpp  SchaakStuk.h  game.cpp  game.h  main.cpp
guicode/: ChessWindow.cpp  ChessWindow.h  chessboard.cpp  chessboard.h  fileIO.cpp  fileIO.h  message.cpp  message.h  resources.h
